# mattools

./: LICENSE  Makefile.am  Makefile.in  README  configure  configure.ac  idxmat_lex.l  idxmat_parse.y  main.c  mat_gen.c  mat_lex.c  mat_lex.l  mat_parse.c  mat_parse.h  mat_parse.y  mat_parse_manual.c  mat_parse_manual.h  matadd.c  vary_array.c  vary_array.h
